--- a/views/category.ejs
+++ b/views/category.ejs
@@ -14,7 +14,7 @@
     
     <ul style="list-style:none">
         <% menuItems.forEach(item => { %>
-                <li><%= item.name %>:<br>
+                <li><%= item.rating === 5 ? '⭐️' : '' %><%= item.name %><%= item.rating === 5 ? '⭐️' : '' %>:<br>
                     $<%= item.price %><br>
                     Rating: <%= item.rating %><br>
                     Description: <%= item.details %><br><br>
