--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,7 +10,7 @@
     <h1>Full Menu</h1>
     <ul style="list-style:none">
         <% items.forEach((item) => { %>
-            <li><%= item.name %><br>
+            <li><%= item.rating === 5 ? '⭐️' : '' %><%= item.name %><%= item.rating === 5 ? '⭐️' : '' %><br>
                 $<%= item.price %><br>
                 Rating: <%= item.rating %><br>
                 Description: <%= item.details %><br><br>
